# Study-practice-5th-semester

./: Dockerfile.webhook  LICENSE  README.md  docker-compose.yml  requirements.txt
demo_stand/: LICENSE  README.md  docker-compose.yml  setup_dev_env.py
demo_stand/gitlab-scripts/: config.yaml  dependency_manager.py  project_setup_sript.py  pyproject.toml
demo_stand/gitlab-scripts/src/: __init__.py  dependency_manager.py  gitlab_api.py  project_setup_script.py  project_setup_sript.py
demo_stand/gitlab-stand/: .gitlab-ci.yml  README.md  pyproject.toml
demo_stand/webhook-app/: Dockerfile  pyproject.toml
demo_stand/webhook-app/src/: main.py
docs/: architecture.md
scripts/: nexus_webhooks_manager.py  project_setup_sript.py
